--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "kayseriolay",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "v16.14.0",
+    "npm": "^8.3.1"
+  },
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node dist/index.js",
+    "build": "rimraf ./dist && tsc"
   },
   "keywords": [],
   "author": "",
